test/resources/parser/failing/testStructure1.scala
object MissingFuncBraces {
  def test(x: Int): Int = x + 1
}